--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "gulpfile.js",
   "scripts": {
     "dev": "gulp",
+    "build": "gulp build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Лейкин Андрей Романович",
