--- a/package.json
+++ b/package.json
@@ -36,11 +36,13 @@
     "gulp-uglifyjs": "^0.6.2"
   },
   "dependencies": {
+    "@chenfengyuan/datepicker": "^1.0.9",
     "animate.css": "^3.5.2",
     "bootstrap": "^4.0.0-alpha.6",
     "font-awesome": "^4.7.0",
     "gulp-concat-css": "^2.3.0",
     "jquery": "^3.2.1",
+    "jquery-mask-plugin": "^1.14.16",
     "node-sass": "^4.7.2",
     "normalize.css": "^7.0.0",
     "nouislider": "^14.5.0",
