--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "gulp-concat-css": "^2.3.0",
     "jquery": "^3.2.1",
     "jquery-mask-plugin": "^1.14.16",
+    "medium-zoom": "^1.0.5",
     "node-sass": "^4.7.2",
     "normalize.css": "^7.0.0",
     "nouislider": "^14.5.0",
